# hw20

./: .env_examle  README.md  data.json  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  paginators.py  serializers.py  tests.py  urls.py  vatidators.py  views.py
materials/migrations/: 0001_initial.py  0002_subscription.py  0003_direction_owner_lesson_owner_delete_subscription.py  0004_subscription.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: csu.py  pay.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_payment_date_and_more.py  0004_alter_payment_payment_method.py  0005_remove_payment_payment_sum_payment_amount.py  0006_payment_link_payment_payment_id.py
